--- a/ajax/post-user.html
+++ b/ajax/post-user.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
+            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
+            rel="stylesheet" 
+            crossorigin="anonymous">    
+    <link href="css/ajax.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
     <script src="js/post-user.js"></script>
 </head>
 <body onload="loaded()">
